[gd_scene load_steps=17 format=3 uid="uid://dvqvx2jmy0020"]

[ext_resource type="Script" uid="uid://by1grigqsuen1" path="res://Scripts/main_scene.gd" id="1_7ewk0"]
[ext_resource type="Texture2D" uid="uid://be0e53u2t3df7" path="res://Resources/bricks.db32.png" id="2_lhp3t"]
[ext_resource type="Script" uid="uid://rtb8xxbdsr8x" path="res://Scripts/tile_map.gd" id="3_gnsmo"]
[ext_resource type="Script" uid="uid://d3gqjxg3o5swm" path="res://Scripts/UI/ui.gd" id="4_psl12"]
[ext_resource type="Script" uid="uid://bs0rbwcchf44c" path="res://Scripts/UI/game_ui.gd" id="5_2ebs2"]
[ext_resource type="Script" uid="uid://x201txgyqqjn" path="res://Scripts/UI/end_game_menu.gd" id="6_oyb3p"]
[ext_resource type="Script" uid="uid://dau322d7ep4pm" path="res://Scripts/UI/pause_menu.gd" id="7_jvnna"]
[ext_resource type="Script" uid="uid://dpomnd5awtfhg" path="res://Scripts/GameStates/game_state_machine.gd" id="8_b48ew"]
[ext_resource type="Script" uid="uid://d33al4wid6ebe" path="res://Scripts/GameStates/playing_state.gd" id="9_8edxt"]
[ext_resource type="Script" uid="uid://ds1522lgwamgm" path="res://Scripts/GameStates/paused_state.gd" id="10_5oxhp"]
[ext_resource type="Script" uid="uid://cj2mekv8mw13y" path="res://Scripts/GameStates/game_over_state.gd" id="11_nt2eh"]
[ext_resource type="Script" uid="uid://c2mwni15h0mqs" path="res://Scripts/GameStates/level_complete_state.gd" id="12_5cm5d"]
[ext_resource type="Script" uid="uid://dcd0g23oxs2tf" path="res://Scripts/Save/save_manager.gd" id="13_5bov3"]
[ext_resource type="Script" uid="uid://xohytmnea87u" path="res://Scripts/Save/level_manager.gd" id="14_xle81"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gyfs4"]
texture = ExtResource("2_lhp3t")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
10:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
0:20/0 = 0
1:20/0 = 0
2:20/0 = 0
3:20/0 = 0
4:20/0 = 0
5:20/0 = 0
6:20/0 = 0
7:20/0 = 0
8:20/0 = 0
9:20/0 = 0
10:20/0 = 0

[sub_resource type="TileSet" id="TileSet_d5x1h"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_gyfs4")

[node name="MainScene" type="Node2D"]
script = ExtResource("1_7ewk0")

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2(1.5, 1.5)
tile_set = SubResource("TileSet_d5x1h")
format = 2
layer_1/name = "Layer1"
script = ExtResource("3_gnsmo")

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("4_psl12")

[node name="GameUI" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("5_2ebs2")

[node name="HBoxContainer" type="HBoxContainer" parent="UI/GameUI"]
layout_mode = 0
offset_left = 857.0
offset_right = 914.0
offset_bottom = 40.0
alignment = 1

[node name="CoinShowText2" type="Label" parent="UI/GameUI/HBoxContainer"]
layout_mode = 2
text = "Счет:"

[node name="ScoreValue" type="Label" parent="UI/GameUI/HBoxContainer"]
layout_mode = 2
text = "0"

[node name="HBoxContainer2" type="HBoxContainer" parent="UI/GameUI"]
layout_mode = 0
offset_left = 994.0
offset_top = 3.0
offset_right = 1109.0
offset_bottom = 43.0
alignment = 1

[node name="CoinShowText2" type="Label" parent="UI/GameUI/HBoxContainer2"]
layout_mode = 2
text = "Для победы:"

[node name="ScoreValue" type="Label" parent="UI/GameUI/HBoxContainer2"]
layout_mode = 2
text = "0"

[node name="VBoxContainer" type="VBoxContainer" parent="UI/GameUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 769.0
offset_top = -16.0
offset_right = 973.0
offset_bottom = 235.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
alignment = 1

[node name="PauseButton" type="Button" parent="UI/GameUI/VBoxContainer"]
layout_mode = 2
text = "Пауза"

[node name="SaveButton" type="Button" parent="UI/GameUI/VBoxContainer"]
layout_mode = 2
text = "Сохранить игру"

[node name="LoadButton" type="Button" parent="UI/GameUI/VBoxContainer"]
layout_mode = 2
text = "Загрузить игру"

[node name="Label" type="Label" parent="UI/GameUI/VBoxContainer"]
layout_mode = 2
text = "Движение - WASD
Ускорение - Пробел"

[node name="EndGameMenu" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_oyb3p")

[node name="Panel" type="Panel" parent="UI/EndGameMenu"]
layout_direction = 4
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1524.0
offset_top = -886.0
offset_right = 1514.0
offset_bottom = 849.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/EndGameMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -102.0
offset_top = -125.5
offset_right = 102.0
offset_bottom = 125.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
alignment = 1

[node name="Label" type="Label" parent="UI/EndGameMenu/VBoxContainer"]
layout_mode = 2
text = "Win!!!"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="UI/EndGameMenu/VBoxContainer"]
layout_mode = 2
text = "Начать заново"

[node name="QuitButton" type="Button" parent="UI/EndGameMenu/VBoxContainer"]
layout_mode = 2
text = "Выйти"

[node name="PauseMenu" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_jvnna")

[node name="Panel" type="Panel" parent="UI/PauseMenu"]
layout_direction = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1058.0
offset_top = -713.0
offset_right = 1100.0
offset_bottom = 714.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -102.0
offset_top = -125.5
offset_right = 102.0
offset_bottom = 125.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
alignment = 1

[node name="Label" type="Label" parent="UI/PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Пауза"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="UI/PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Вернуться"

[node name="LoadButton" type="Button" parent="UI/PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Загрузить игру"

[node name="SaveQuitButton" type="Button" parent="UI/PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Сохранить и выйти"

[node name="GameStateMachine" type="Node" parent="."]
script = ExtResource("8_b48ew")

[node name="PlayingState" type="Node" parent="GameStateMachine"]
script = ExtResource("9_8edxt")

[node name="PausedState" type="Node" parent="GameStateMachine"]
script = ExtResource("10_5oxhp")

[node name="GameOverState" type="Node" parent="GameStateMachine"]
script = ExtResource("11_nt2eh")

[node name="LevelCompleteState" type="Node" parent="GameStateMachine"]
script = ExtResource("12_5cm5d")

[node name="SaveManager" type="Node" parent="."]
script = ExtResource("13_5bov3")

[node name="LevelManager" type="Node" parent="."]
script = ExtResource("14_xle81")

[connection signal="pressed" from="UI/GameUI/VBoxContainer/PauseButton" to="UI/GameUI" method="_on_pause_button_pressed"]
[connection signal="pressed" from="UI/GameUI/VBoxContainer/SaveButton" to="UI/GameUI" method="_on_save_button_pressed"]
[connection signal="pressed" from="UI/GameUI/VBoxContainer/LoadButton" to="UI/GameUI" method="_on_load_button_pressed"]
[connection signal="pressed" from="UI/EndGameMenu/VBoxContainer/RestartButton" to="UI/EndGameMenu" method="_on_restart_button_pressed"]
[connection signal="pressed" from="UI/EndGameMenu/VBoxContainer/QuitButton" to="UI/EndGameMenu" method="_on_quit_button_pressed"]
[connection signal="pressed" from="UI/PauseMenu/VBoxContainer/ResumeButton" to="UI/PauseMenu" method="_on_resume_button_pressed"]
[connection signal="pressed" from="UI/PauseMenu/VBoxContainer/LoadButton" to="UI/PauseMenu" method="_on_load_button_pressed"]
[connection signal="pressed" from="UI/PauseMenu/VBoxContainer/SaveQuitButton" to="UI/PauseMenu" method="_on_save_quit_button_pressed"]
